--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -27,9 +27,7 @@
 <div class="container mobile-margin-r-none" >
 
 
-  <div class=" mobile-none container max-w">
-    <h1 class="offer-header-font-1">Booking</h1>
-  </div>
+  <div id="dashboardHeader" style="z-index: 1; border-bottom:1px solid rgba(0, 0, 0, 0.085) ;"></div>
 
   <br>
   <div class="container  max-w overflow" style="overflow-x: scroll;">
